<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/craete_team_card_background"
    android:orientation="vertical">


    <TextView
        style="@style/textView_Auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/create_team"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_email_login"
        style="@style/textView_Auth"
        android:layout_marginTop="12dp"
        android:text="@string/team_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_team_name"
        style="@style/editView_Auth"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_team_name"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:textSize="18sp" />


    <TextView
        style="@style/textView_Auth"
        android:layout_marginTop="12dp"
        android:text="@string/bio"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_team_bio"
        style="@style/editView_Auth"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:gravity="start"
        android:hint="@string/enter_team_name"
        android:inputType="textEmailAddress"
        android:minHeight="90dp"
        android:paddingVertical="4dp"
        android:textSize="18sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp">

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/button_done"
            style="@style/button_Auth"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_auth_background"
            android:text="@string/done"
            android:textAllCaps="false"
            app:initialCornerAngle="20dp"
            app:spinning_bar_color="#054163"
            app:spinning_bar_padding="2dp"
            app:spinning_bar_width="40dp" />

        <ProgressBar
            android:id="@+id/bottom_sheet_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:elevation="20dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>