<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/team_model_background">

    <TextView
        android:id="@+id/teamName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:fontFamily="@font/crimson_text_semi_bold"
        android:textSize="18sp"
        android:textColor="@color/color_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamNum_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_semi_bold"
        android:text="@string/team_num"
        android:textColor="@color/color_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamDescription_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_regular"
        android:text="@string/team_description"
        android:textColor="@color/team_description"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/teamName_textView"
        app:layout_constraintEnd_toStartOf="@id/teamNum_textView"
        app:layout_constraintStart_toStartOf="@id/teamName_textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_view"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/view_button_background"
        android:textSize="16sp"
        android:fontFamily="@font/crimson_text_semi_bold"
        android:text="@string/View"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamDescription_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>