<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="24sp"
                android:textColor="@color/color_text"
                android:text="@string/edit_profile"
                />

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:padding="2dp"
            android:src="@drawable/ic_profile"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/primary_blue"
            app:strokeWidth="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/full_name"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_background_with_border"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/track"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_track"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_background_with_border"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/github"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_github_link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_background_with_border"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/faceBook"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_facebook_link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_background_with_border"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/linked"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_linked_in_link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_background_with_border"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@style/button_Auth"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_auth_background"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>