<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/team_margin_start"
        android:layout_marginTop="20dp"
        android:background="@drawable/arr_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/teamName_inTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/team_margin_start"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/crimson_text_regular"
        android:textStyle="bold"
        android:text="@string/team_name"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/teamBio_inTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/team_margin_start"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/team_margin_start"
        android:fontFamily="@font/crimson_text_bold"
        android:text="@string/team_description"
        android:textColor="@color/team_bio_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamName_inTeam" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/teamMembers_inTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/team_margin_start"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/crimson_text_semi_bold"
        android:text="@string/team_members_names"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamBio_inTeam" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_inTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/team_margin_start"
        android:layout_marginEnd="@dimen/team_margin_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamMembers_inTeam"
        tools:listitem="@layout/member_data_model" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/joinButton_inTeam"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/button_auth_background"
        android:text="@string/join"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/team_margin_start"
        android:layout_marginEnd="@dimen/team_margin_start"
        android:layout_marginBottom="@dimen/team_margin_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>